@@ -2,11 +2,11 @@
 # coding: utf-8
 
 require "pp"
-gem "builtinextension"
+#gem "builtinextension"
 require "string/escapezsh.rb"
 require "filerenamer.rb"
 #require "filerenamer/commander.rb"
-require "filerenamer/optionparser.rb"
+#require "filerenamer/optionparser.rb"
 
 OPTIONS = {}
 op = FileRenamer::OptionParser.new
