@@ -6,8 +6,11 @@ require "helper"
 #require "test/unit"
 #require "pkg/klass.rb"
 
-pp "old ファイルが存在しなければ unable"
-pp "old に重複があれば、例外"
+#pp "old ファイルが存在しなければ unable"
+#pp "old に重複があれば、例外"
+
+
+$DEBUG = false
 
 class TC_RenameOrderer < Test::Unit::TestCase
 
@@ -18,42 +21,43 @@ class TC_RenameOrderer < Test::Unit::TestCase
 
   # independent
   def test_00
-    ro = FileRenamer::RenameOrderer.new([ %w(0 1), %w(2 3), ], D02)
-    assert_equal([ %w(0 1), %w(2 3), ], ro.rename_processes)
+    ro = FileRenamer::RenameOrderer.new({ '0' => '1', '2' => '3'}, D02)
+    assert_equal([ %w(0 1), %w(2 3)], ro.rename_processes)
     assert_equal([                   ], ro.unable_processes)
   end
 
   # dependent
   def test_01
-    ro  = FileRenamer::RenameOrderer.new([ %w(0 1), %w(1 2), ], D01)
-    assert_equal([ %w(1 2), %w(0 1), ], ro.rename_processes)
+    ro  = FileRenamer::RenameOrderer.new({ '0' => '1', '1' => '2'}, D01)
+    assert_equal([ %w(1 2), %w(0 1)], ro.rename_processes)
     assert_equal([                   ], ro.unable_processes)
   end
 
   # dependent
   def test_02
-    ro = FileRenamer::RenameOrderer.new([ %w(1 2), %w(0 1), ], D01)
-    assert_equal([ %w(1 2), %w(0 1), ], ro.rename_processes)
-    assert_equal([                   ], ro.unable_processes)
+    ro = FileRenamer::RenameOrderer.new({ '1' => '2', '0' => '1'}, D01)
+    assert_equal([ %w(1 2), %w(0 1)], ro.rename_processes)
+    assert_equal([], ro.unable_processes)
   end
 
   # dup target
   def test_03
-    ro = FileRenamer::RenameOrderer.new([ %w(0 1), %w(2 1), ], D02)
+    ro = FileRenamer::RenameOrderer.new({ '0' => '1', '2' => '1'}, D02)
     assert_equal([                   ], ro.rename_processes)
-    assert_equal([ %w(0 1), %w(2 1), ], ro.unable_processes)
+    assert_equal([ %w(0 1), %w(2 1)], ro.unable_processes)
   end
 
   # swap (circular when 2)
   def test_04
-    ro = FileRenamer::RenameOrderer.new([ %w(0 1), %w(1 0), ], D01)
-    #assert_equal([ %w(0 0tmp), %w(1 0), %w(0tmp 1)], ro.rename_processes)
+    ro = FileRenamer::RenameOrderer.new({'0' => '1', '1' => '0'}, D01)
     results = ro.rename_processes
+    #pp results
     assert_equal('0', results[0][0])
-    assert(/^test/ =~ results[0][1])
     assert_equal('1', results[1][0])
-    assert_equal('0', results[1][1])
     assert(/^test/ =~ results[2][0])
+
+    assert(/^test/ =~ results[0][1])
+    assert_equal('0', results[1][1])
     assert_equal('1', results[2][1])
 
     assert_equal([], ro.unable_processes)
@@ -61,42 +65,51 @@ class TC_RenameOrderer < Test::Unit::TestCase
 
   # circular
   def test_05
-    ro = FileRenamer::RenameOrderer.new([ %w(0 1), %w(1 2), %w(2 0) ], D012)
+    ro = FileRenamer::RenameOrderer.new({ '0' => '1', '1' => '2', '2' => '0'}, D012)
     results = ro.rename_processes
+
     #pp results
-    #assert_equal([ %w(0 0tmp), %w(2 0), %w(1 2), %w(0 1), %w(0tmp 2)], ro.rename_processes)
     assert_equal('0', results[0][0])
-    assert(/^test/ =~ results[0][1])
     assert_equal('2', results[1][0])
-    assert_equal('0', results[1][1])
     assert_equal('1', results[2][0])
-    assert_equal('2', results[2][1])
     assert(/^test/ =~ results[3][0])
+
+    assert(/^test/ =~ results[0][1])
+    assert_equal('0', results[1][1])
+    assert_equal('2', results[2][1])
     assert_equal('1', results[3][1])
 
-    assert_equal([                                                  ], ro.unable_processes)
+    assert_equal([], ro.unable_processes)
   end
 
   # circular adding depend
   def test_06
-    ro = FileRenamer::RenameOrderer.new([ %w(0 1), %w(1 2), %w(2 0), %w(3 0) ], D0123)
+    ro = FileRenamer::RenameOrderer.new({ '0' => '1', '1' => '2', '2' => '0', '3' => '0'}, D0123)
     assert_equal([                                    ], ro.rename_processes)
-    assert_equal([ %w(0 1), %w(1 2), %w(2 0), %w(3 0) ], ro.unable_processes)
+    assert_equal([ %w(0 1), %w(1 2), %w(2 0), %w(3 0)], ro.unable_processes)
   end
 
   # dup target and independent
   def test_07
-    ro = FileRenamer::RenameOrderer.new([ %w(0 3), %w(1 3), %w(2 4) ], D012)
-    assert_equal([ %w(2 4)         ], ro.rename_processes)
+    ro = FileRenamer::RenameOrderer.new({ '0' => '3', '1' => '3', '2' => '4'}, D012)
+    assert_equal([ %w(2 4)], ro.rename_processes)
     assert_equal([ %w(0 3), %w(1 3)], ro.unable_processes)
   end
 
-  #def test_08
-  #  ro = FileRenamer::RenameOrderer.new([ %w(0 1), %w(2 3), ], D01)
-  #  assert_equal([ %w(0 1)], ro.rename_processes)
-  #  assert_equal([ %w(2 3)], ro.unable_processes)
-  #end
+  # not exist
+  def test_08
+    #$DEBUG = true
+    ro = FileRenamer::RenameOrderer.new({'2' => '3'}, D01)
+    assert_equal([], ro.rename_processes)
+    assert_equal([ %w(2 3) ], ro.unable_processes)
+  end
 
+  # same name
+  def test_09
+    ro = FileRenamer::RenameOrderer.new({ '0' => '0', '1' => '2'}, D01)
+    assert_equal([ %w(1 2)], ro.rename_processes)
+    assert_equal([ %w(0 0)], ro.unable_processes)
+  end
 
   #undef test_00
   #undef test_01
@@ -106,5 +119,8 @@ class TC_RenameOrderer < Test::Unit::TestCase
   #undef test_05
   #undef test_06
   #undef test_07
+  #undef test_08
+  #undef test_09
+
 end
 
