@@ -2,8 +2,9 @@
 
 <!-- Master -->
 
-* Implement intermediate directory to convert to path
-  which already exist but to be converted.
+
+依存性ちぇっく
+* Add RenameOrderer, a smart dependency resolver of rename processes.
 
 == Version 0.0.9 [2016-07-12] released
 
